refactor: code and errors refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.properties": "java-properties",
         "unistd.h": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "mman.h": "c"
     }
 }
