fix: fixed wrong parsing and implemented memory population

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.properties": "java-properties",
         "unistd.h": "c",
         "cstdlib": "c",
-        "mman.h": "c"
+        "mman.h": "c",
+        "semaphore_lib.h": "c"
     }
 }
